k8s/namespace.yaml
# Namespace where the app is going
# to reside in the cluster
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-lab
